log/build_2023-06-26_10-57-53/cpp_pubsub/stdout_stderr.log
[35m[1mConsolidate compiler generated dependencies of target listener.fpga_emu[0m
[ 25%] [32mBuilding CXX object CMakeFiles/listener.fpga_emu.dir/src/subscriber_member_function.cpp.o[0m
[ 75%] Built target talker
[1m/home/bobxu/ros_sycl_ws/src/cpp_pubsub/src/subscriber_member_function.cpp:60:28: [0m[0;1;31merror: [0m[1mno template named 'pipe'; did you mean 'sycl::pipe'?[0m
using pipe_host_2_kernel = pipe<Pipe_test_ID, int, 8>;
[0;1;32m                           ^
[0m[1m/opt/intel/oneapi/compiler/2023.1.0/linux/bin-llvm/../include/sycl/pipes.hpp:16:1: [0m[0;1;30mnote: [0m'sycl::pipe' declared here[0m
using pipe = ext::intel::pipe<name, dataT, min_capacity>;
[0;1;32m^
[0m[1m/home/bobxu/ros_sycl_ws/src/cpp_pubsub/src/subscriber_member_function.cpp:66:19: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'pipe_host_2_kernel'[0m
      float out = pipe_host_2_kernel::read();
[0;1;32m                  ^
[0m[1m/home/bobxu/ros_sycl_ws/src/cpp_pubsub/src/subscriber_member_function.cpp:119:50: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'pipe_host_2_kernel'[0m
  auto node = std::make_shared<MinimalSubscriber<pipe_host_2_kernel>>();
[0;1;32m                                                 ^
[0m3 errors generated.
gmake[2]: *** [CMakeFiles/listener.fpga_emu.dir/build.make:76: CMakeFiles/listener.fpga_emu.dir/src/subscriber_member_function.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:166: CMakeFiles/listener.fpga_emu.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
